minor css adjustment

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -11,7 +11,7 @@
       <th>Class Name</th>
       <th>Instructor</th>
       <th>First Date</th>
-      <th>Into Level?</th>
+      <th>Intro Level?</th>
       <th>Days</th>
       <th>Cost</th>
       <th></th>
