--- a/main/static/base.less
+++ b/main/static/base.less
@@ -242,8 +242,8 @@ a { display: inline-block; }
   border-bottom: 0;
   .box { height: 0; overflow: hidden; }
   .left { float: left; width: 200px; }
-  .right { float: left; width: 700px; }
-  .left, .right { padding: 10px 0; }
+  .right { float: left; width: 600px; }
+  .left, .right { padding: 10px; }
 }
 
 #checkout-box {
