--- a/main/static/base.less
+++ b/main/static/base.less
@@ -263,7 +263,7 @@ a { display: inline-block; }
 }
 
 .simplemodal-close {
-  background: url(X.png) no-repeat;
+  background: url(/static/X.png) no-repeat;
   cursor: pointer;
   height: 27px;
   position: absolute;
@@ -282,13 +282,16 @@ a { display: inline-block; }
   border: black 4px solid;
   border-radius: 10px;
   padding: 15px;
-  width: 700px;
+  width: 480px;
 }
+
+#cart { padding-bottom: 20px; }
 
 /** cart **/
 .cartHeaders > div, .itemContainer > div {
   display: inline-block;
-  padding: 3px 10px;
+  padding: 3px 20px 3px 10px;
+  width: 35px;
 }
 
 .modal .itemName {
