minor css tweaks

--- a/main/static/base.less
+++ b/main/static/base.less
@@ -45,9 +45,9 @@ a { display: inline-block; }
 }
 
 .header {
+  height: 51px;
   margin: 0 auto 10px;
   min-height: 25px;
-  overflow: hidden;
   width: 980px;
   a {
     color: black;
@@ -98,7 +98,7 @@ a { display: inline-block; }
 }
 
 .auth .gear {
-  background: url(gear.png) right top no-repeat white;
+  background: url(/static/gear.png) right top no-repeat white;
   display: inline-block;
   height: 17px;
   padding: 3px;
