--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -64,7 +64,7 @@ $(window).bind('popstate', function(event) {
 {% endcomment %}
 
 function showLogin() {
-    $("#login-dialog").addClass("login-visible");
+    $("#login-dialog").toggleClass("login-visible");
 }
 
 
