--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -69,7 +69,8 @@ function showLogin() {
 
 
 /* simpleCart setup */
-simpleCart.email = "txrxlabs@gmail.com";
+//simpleCart.email = "txrxlabs@gmail.com";
+simpleCart.email = "seller_1346532499_biz@ufl.edu";
 
 simpleCart.cartHeaders = ["Name", "Price","Remove"]
 
