Trying to enable password resets

--- a/txrx/templates/comming_soon.html
+++ b/txrx/templates/comming_soon.html
@@ -2,7 +2,7 @@
 {% block content %}
 <ol class="feed">
   <li style="height: 600px;">
-    <h1>COMMING SOON!!!!1!
+    <h1>COMING SOON!!!!1!
   </li>
 </ol>
 {% endblock %}
