--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -109,6 +109,7 @@ function toggleCourses() {
     <div class="close" onclick="$(this).closest('.modal').dialog('close');">
     </div>
   </div>
+  <a href="{% url "password_reset_recover" %}">Forgot your password?</a>
 </body>
 {% block extrafooter %}
 {% endblock %}
