--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -109,7 +109,7 @@ function toggleCourses() {
     <div class="close" onclick="$(this).closest('.modal').dialog('close');">
     </div>
   </div>
-  <a href="/password-reset/">Forgot your password?</a>
+  <a href="/password-reset/recover/">Forgot your password?</a>
 </body>
 {% block extrafooter %}
 {% endblock %}
