fixing a checkout bug roland noticed

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -102,7 +102,7 @@
     Total: <span class="simpleCart_finalTotal"></span>
   </div>
   <div>
-    <a class="blue" href="javascript:$('#cart-modal').modal();">Checkout</a>
+    <a class="blue" href="javascript:;" onclick="$('#cart-modal').modal();return false;">Checkout</a>
 </div>
 <div class="modal" id="cart-modal" style="display: none;">
   <div style="position: relative;">
