adding more padding to date row

--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -19,7 +19,7 @@
     {% for session in sessions %}
     {% ifchanged session.week %}
     <tr>
-      <td colspan="8" style="padding: 5px 0;">
+      <td colspan="8" style="padding: 25px 0 5px;">
 	Classes starting {{ session.week.0 }} - {{ session.week.1 }}
       </td>
     </tr>
