--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,111 +1,113 @@
 {% extends "base.html" %}
 {% load thumbnail %}
 
+{% block extra_head %}
+<script type="text/javascript">
+function expand(that) {
+  $(that).closest('.row').toggleClass('expanded');
+  return false;
+}
+</script>
+{% endblock %}
+
 {% block main %}
 {% include "widgets/filters.html" %}
 <h1>Classes for {{ term.name }}</h1>
 <div id="courses">
-  <table class="feed" rowspacing="0" cellpadding="0">
-    <tr style="height: 35px;">
-      <th></th>
-      <th>Class Name</th>
-      <th>Instructor</th>
-      <th>First Date</th>
-      <th>Intro Level?</th>
-      <th>Days</th>
-      <th>Cost</th>
-      <th></th>
-    </tr>
-    {% for session in sessions %}
-    {% ifchanged session.week %}
-    <tr>
-      <td colspan="8" style="padding: 25px 0 5px;">
-	Classes starting {{ session.week.0 }} - {{ session.week.1 }}
-      </td>
-    </tr>
-    {% endifchanged %}
-    <tr id="c{{session.id}}" class="course filterable {% cycle row1,row2 %}"
-	data-subject="{% for subject in session.section.course.subjects.all %}{{ subject }},{% endfor %}"
-	{%if not session.course.closed%}data-open{%endif%}
-	data-date="{{ session.starttime|date:"Ymd" }}">
-      <td class="showDetails">
-	<a href="javascript:;" onclick="$(this).closest('tr').toggleClass('expanded'); return false;"></a>
-      </td>
-      <td>{{ session.section.course }}</td>
-      <td>{% if session.user.first_name %}
-	{{ session.user.first_name }} {{ session.user.last_name|slice:":1" }}.{% else %}
-	{{ session.user.username }}{% endif %}
-      </td>
-      <td>{{ session.classtime_set.all.0.start|date:"F j" }}</td>
-      <td>
-	{% if session.section.prerequisites or session.section.requirements %}
-	<a href="javascript:;" onclick="$(this).closest('tr').toggleClass('expanded'); return false;">
-	  see description
-	</a>
-	{% else %}
-	Yes
-	{% endif %}
-      </td>
-      <td>{{ session.classtime_set.count }}</td>
-      <td class="fee">
-	<span class="item_price">
-	  {{ session.section.fee }}{% if session.section.fee_notes %}*{% endif %}
-	</span>
-      </td>
-      <td>
-	{% if session in user_sessions %}
-	enrolled
-	{% elif session.closed %}
-	{{ session.closed_string }}
-	{% else %}
-	<a class="add" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();">Enroll</a>
-	<a class="drop" href="javascript:simpleCart.remove('{{ session.id }}'); toggleCourses();">Drop</a>
-	{% endif %}
-      </td>
-    </tr>
-    <tr class="details {% cycle row1,row2 %}">
-      <td colspan="8">
-	<div class="box">
-	  <div class="left">
-	    <div class="subjects">
-	      <b>Subject{% if session.section.course.subjects.count > 1 %}s{% endif %}</b>:
-	      {% for subject in session.section.course.subjects.all %}
-	      {{ subject }}{% if not forloop.last %}, {% endif %}
-	      {% endfor %}
-	    </div>
-	    <ol class="dates">{% for classtime in session.classtime_set.all %}
-	      <li>
-		{{ classtime.start|date:"D m/d G:i" }}
-		-
-		{{ classtime.end_time|time:"G:i" }}
-	      </li>{% endfor %}
-	    </ol>
-	  </div>
-	  <div class="right">
-	    <div class="description">
-	      {{ session.section.description|linebreaksbr }}
-	    </div>
-	    {% if session.section.fee_notes %}
-	    <span class="notes">* {{ session.section.fee_notes }}</span>
-	    {% endif %}
-	    {% if session.section.requirements %}
-	    <span class="notes">
-	      <b>Requirements:</b> {{ session.section.requirements }}
-	    </span>
-	    {% endif %}
-	    {% if session.section.prerequisites %}
-	    <span class="notes">
-	      <b>Prerequisites:</b>
-	      {{ session.section.prerequisites }}
-	    </span>
-	    {% endif %}
-	  </div>
-	  <div style="clear: both;"></div>
+  <div class="row th">
+    <div class="name">Class Name</div>
+    <div class="instructor">Instructor</div>
+    <div class="first_date">First Date</div>
+    <div class="intro">Intro Level?</div>
+    <div class="days">Days</div>
+    <div class="cost">Cost</div>
+    <div class="fee"></div>
+  </div>
+  {% for session in sessions %}
+
+  {% ifchanged session.week %}
+  <div class="row month">
+    <div colspan="8" style="padding: 25px 0 5px;">
+      Classes starting {{ session.week.0 }} - {{ session.week.1 }}
+    </div>
+  </div>
+  {% endifchanged %}
+
+  <div id="c{{session.id}}" class="row course filterable {% cycle row1,row2 %}"
+       data-subject="{% for subject in session.subjects %}{{ subject }},{% endfor %}"
+       {%if not session.course.closed%}data-open{%endif%}
+       data-date="{{ session.starttime|date:"Ymd" }}">
+    <div class="name">
+      {{ session.section.course }}
+      <a href="javascript:;" onclick="return expand(this);" class="showDetails"></a>
+    </div>
+    <div class="instructor">{% if session.user.first_name and session.user.last_name%}
+      {{ session.user.first_name }} {{ session.user.last_name|slice:":1" }}.{% else %}
+      {{ session.user.username }}{% endif %}
+    </div>
+    <div class="first_date">{{ session.classtime_set.all.0.start|date:"F j" }}</div>
+    <div class="intro">
+      {% if session.section.prerequisites or session.section.requirements %}
+      <a href="javascript:;" onclick="return expand(this);" class="showDetails">No (details)</a>
+      {% else %}
+      Yes
+      {% endif %}
+    </div>
+    <div class="days">{{ session.classtime_set.count }}</div>
+    <div class="fee">
+      <span class="item_price">
+	{{ session.section.fee }}{% if session.section.fee_notes %}*{% endif %}
+      </span>
+    </div>
+    <div>
+      {% if session in user_sessions %}
+      enrolled
+      {% elif session.closed %}
+      {{ session.closed_string }}
+      {% else %}
+      <a class="add" href="javascript:addItem('{{ session.section.course }} ({{ session.classtime_set.all.0.start|date:"m/d/Y" }})',{{ session.section.fee }},'{{ session.id }}'); toggleCourses();">Enroll</a>
+      <a class="drop" href="javascript:simpleCart.remove('{{ session.id }}'); toggleCourses();">Drop</a>
+      {% endif %}
+    </div>
+    <div class="details">
+      <div class="left">
+	<div class="subjects">
+	  <b>Subject{% if session.section.course.subjects.count > 1 %}s{% endif %}</b>:
+	  {% for subject in session.section.course.subjects.all %}
+	  {{ subject }}{% if not forloop.last %}, {% endif %}
+	  {% endfor %}
 	</div>
-      </td>
-    </tr>
-    {% endfor %}
-  </table>
+	<ol class="dates">{% for classtime in session.classtime_set.all %}
+	  <li>
+	    {{ classtime.start|date:"D m/d G:i" }}
+	    -
+	    {{ classtime.end_time|time:"G:i" }}
+	  </li>{% endfor %}
+	</ol>
+      </div>
+      <div class="right">
+	<div class="description">
+	  {{ session.section.description|linebreaksbr }}
+	</div>
+	{% if session.section.fee_notes %}
+	<span class="notes">* {{ session.section.fee_notes }}</span>
+	{% endif %}
+	{% if session.section.requirements %}
+	<span class="notes">
+	  <b>Requirements:</b> {{ session.section.requirements }}
+	</span>
+	{% endif %}
+	{% if session.section.prerequisites %}
+	<span class="notes">
+	  <b>Prerequisites:</b>
+	  {{ session.section.prerequisites }}
+	</span>
+	{% endif %}
+      </div>
+      <div style="clear: both;"></div>
+    </div>
+  </div>
+  {% endfor %}
 </div>
 <div id="checkout-box">
   <div>
