adding link to my classes

--- a/txrx/templates/header.html
+++ b/txrx/templates/header.html
@@ -2,7 +2,11 @@
   <a href="/" class="logo">
     <img src="/static/bw-logo.png" />
   </a>
-  <div class="nav" id="nav">{% for n in nav %}<a href="/{{ n|slugify }}" class="{{ n|slugify}}{% if n == current %} current{% endif %}{% if forloop.last %} no-border {% endif %}">{{ n|upper }}</a>{% endfor %}</div>
+  <div class="nav" id="nav">
+    {% for n in nav %}
+    <a href="{{ n.url }}" class="">{{ n.name|upper }}</a>
+    {% endfor %}
+  </div>
   <div class="auth">
     {% if user.is_authenticated %}
     <a href="javascript:;" onclick="$('.auth').toggleClass('active');return false;">
