--- a/main/static/base.less
+++ b/main/static/base.less
@@ -82,6 +82,7 @@ a { display: inline-block; }
   margin-bottom: 5px;
   padding: 5px 10px;
   text-shadow: 1px 1px 1px #bbb;
+  &:last-child { border: none; }
 }
 
 .auth {
