adding links to luogin form

--- a/txrx/templates/registration/_login_form.html
+++ b/txrx/templates/registration/_login_form.html
@@ -19,6 +19,10 @@
   <div class="submit-row">
     <label>&nbsp;</label><input type="submit" value="Log in" />
   </div>
+  <div>
+    <a class="blue" href="/accounts/register/">Register</a> |
+    <a class="blue" href="/password-reset/recover/">Reset Password</a>
+  </div>
   {% comment %}
   <div>
     <a href="/google_login?next={{ next }}" style="vertical-align: botton; display: inline-block; height: 25px; padding-left: 30px">
