adding current classes to my classes page

--- a/main/static/base.less
+++ b/main/static/base.less
@@ -22,6 +22,14 @@ a img { border: 0; }
   margin-left: 10px;
 }
 
+h1 {
+  margin-bottom: 10px;
+}
+
+section {
+  margin-bottom: 20px;
+}
+
 /* global site-specific */
 body { background: #333; padding-bottom: 30px}
 a { display: inline-block; }
