--- a/txrx/templates/header.html
+++ b/txrx/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <a href="/" class="logo">
-    <img src="/static/bw-logo.png" />
+    <img src="/static/bw-logo.png" width="285" height="45"/>
   </a>
   <div class="nav" id="nav">
     {% for n in nav %}
