--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load thumbnail %}
 
+{% block title %}Classes {{ term.name }} at {{ block.super }} {% endblock %}
+
 {% block extra_head %}
 <script type="text/javascript">
 function expand(that) {
@@ -11,6 +13,18 @@ function expand(that) {
 {% endblock %}
 
 {% block main %}
+{% if "success" in request.GET %}
+<b>
+  You have been enrolled in your classes.
+  {% if not request.user.is_authenticated %}
+  <br />
+  If you haven't already, please click
+  <a href="/password-reset/recover/">reset your password</a>.
+  <br />
+  Otherwise click please <a href="/accounts/login/">log in</a>.
+  {% endif %}
+</b>
+{% endif %}
 {% include "widgets/filters.html" %}
 <h1>Classes for {{ term.name }}</h1>
 <div id="courses">
@@ -144,6 +158,10 @@ function expand(that) {
   <div class="clear"></div>
 </div>
 <script type="text/javascript">
-  simpleCart.ready(toggleCourses)
+  function simple_cart_ready() {
+    {% if "success" in request.GET %}simpleCart.empty();{% endif %}
+    toggleCourses();
+  };
+  simpleCart.ready(simple_cart_ready)
 </script>
 {% endblock %}
