--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{%block title%}{%endblock%}TX/RX Labs</title>
+  <title>{% block title %}TX/RX Labs{% endblock %}</title>
   {# Remote CSS #}
   <link href="http://fonts.googleapis.com/css?family=Josefin+Sans:400,700&v2"
         rel="stylesheet" type="text/css">
@@ -77,6 +77,7 @@ function showLogin() {
 simpleCart.email = "txrxlabs@gmail.com";
 //simpleCart.email = "seller_1346532499_biz@ufl.edu";
 
+simpleCart.successURL = "/classes/?success"
 simpleCart.cartHeaders = ["Name", "Price","Remove"]
 
 function showCart() {
