--- a/course/templates/course/classes.html
+++ b/course/templates/course/classes.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load thumbnail %}
+{% load thumbnail content_tags %}
 
 {% block title %}Classes {{ term.name }} at {{ block.super }} {% endblock %}
 
