--- a/txrx/templates/join-us.html
+++ b/txrx/templates/join-us.html
@@ -1,4 +1,4 @@
-{% extends request.TEMPLATE %}{% load copy %}
+{% extends request.TEMPLATE %}{% load content_tags %}
 {% block content %}
 <h1>Become a Member of TX/RX Labs</h1>
 {{ "join_us-top"|print_copy }}
