--- a/txrx/templates/join-us.html
+++ b/txrx/templates/join-us.html
@@ -1,5 +1,6 @@
 {% extends request.TEMPLATE %}{% load content_tags %}
-{% block content %}
+
+{% block main %}
 <h1>Become a Member of TX/RX Labs</h1>
 {{ "join_us-top"|print_copy }}
 <div class="clear"></div>
