--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -12,9 +12,14 @@
     
   {# Local CSS #}
   {# Site Design CSS #}
+  {% if settings.DEBUG %}
+  <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}base.less" />
+  <script type="text/javascript" src="{{ STATIC_URL }}js/less.js"></script>
+  {% else %}
   {% compress css %}
   <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}base.less" />
   {% endcompress %}
+  {% endif %}
   <!--[if IE 6]>
   <link rel="stylesheet" type="text/css" href="/static/design/ie6.css"/>
   <![endif]-->
