--- a/main/static/less/course.less
+++ b/main/static/less/course.less
@@ -1,3 +1,23 @@
+#courses {
+  margin-bottom: 75px;
+  .row { border-bottom: 1px black solid; padding: 5px;}
+  .row1 { background: #d8d8d0; }
+}
+
+#courses .row>div {
+  display: inline-block;
+  vertical-align: top;
+  padding-right:5px;
+}
+
+#courses .course .details { display: none; }
+
+#courses .course .details {
+  .left { float: left; width: 200px; }
+  .right { float: left; width: 600px; }
+  .left, .right { padding: 10px; }
+}
+
 #courses .row {
   .name { width: 390px; }
   .instructor { width: 95px; }
