--- a/txrx/templates/header.html
+++ b/txrx/templates/header.html
@@ -2,11 +2,18 @@
   <a href="/" class="logo">
     <img src="/static/bw-logo.png" width="285" height="45"/>
   </a>
-  <div class="nav" id="nav">
+  <ul class="nav" id="nav">
     {% for n in nav %}
-    <a href="{{ n.url }}" class="">{{ n.name|upper }}</a>
+    <li>
+      <a href="{{ n.url }}" class="">{{ n.name|upper }}</a>
+      <div>
+        {% for sublink in n.sublinks %}
+        <a href="{{ sublink.url }}">{{ sublink.name|title }}</a>        
+        {% endfor %}
+      </div>
+    </li>
     {% endfor %}
-  </div>
+  </ul>
   <div class="auth">
     {% if user.is_authenticated %}
     <a href="javascript:;" onclick="$('.auth').toggleClass('active');return false;">
