--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -12,22 +12,22 @@
   <meta name="robots" content="follow, all" />
   <meta name="language" content="{{ LANGUAGE_CODE }}" />
   <meta name="viewport" content="width=device-width; initial-scale=1.0;" />
-  <meta name="description" content="{% block meta-description %}Demonstration of the Zinnia Blog application.{% endblock %}" />
-  <meta name="keywords" content="{% block meta-keywords %}django, blog, zinnia, {{ entry_tags|join:", "}}{% endblock %}" />
-  <meta name="author" content="Fantomas42" />
+  <meta name="description" content="{% block meta-description %}Tx/Rx Labs. Houston's Hackerspace{% endblock %}" />
+  <meta name="keywords" content="{% block meta-keywords %}txrx labs, houston, technology, hackerspace, {{ entry_tags|join:", "}}{% endblock %}" />
+  <meta name="author" content="Chris Cauley" />
   {% block meta %}{% endblock %}
   {# Local CSS #}
   {# Site Design CSS #}
   {% if settings.DEBUG %}
   <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less" />
   <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/course.less" />
-  <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/zinnia.less" />
+  {#<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/zinnia.less" />#}
   <script type="text/javascript" src="{{ STATIC_URL }}js/less.js"></script>
   {% else %}
   {% compress css %}
   <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/base.less" />
   <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/course.less" />
-  <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/zinnia.less" />
+  {#<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/zinnia.less" />#}
   {% endcompress %}
   {% endif %}
   <!--[if IE 7]><link rel="stylesheet" type="text/css" href="/static/design/ie7.css"/><![endif]-->
@@ -43,7 +43,7 @@
   {% block script %}{% endblock %}
 </head>
 
-<body class="{% block body-class %}{% endblock %}">
+<body class="{% block body-class %}{% endblock %} zinnia">
   <div id="wrapper">
     {% include "header.html" %}
   <div id="main" class="{{ current|slugify }}">
