--- a/txrx/templates/500.html
+++ b/txrx/templates/500.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-An error has occured. Sorry.
+<h1>500 Error</h1>
+<p>
+An error has occured. Sorry. The admins have been notified and will fix the problem soon. Feel free to email Chris and tell him what you did to cause this error, and he'll write you back when you can safely do what you were trying to do. chris (at) lablackey (dot) com
+</p>
 {% endblock %}
