--- a/txrx/templates/base.html
+++ b/txrx/templates/base.html
@@ -33,6 +33,9 @@
   <!--[if IE 7]><link rel="stylesheet" type="text/css" href="/static/design/ie7.css"/><![endif]-->
   <!--[if IE 8]><link rel="stylesheet" type="text/css" href="/static/design/ie8.css"/><![endif]-->
 
+  <script type="text/javascript">
+    var _NOTIFY_URL = "http://{{ request.META.HTTP_HOST }}/tx/rx/ipn/handler/";
+  </script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/simpleCart.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.simplemodal.js"></script>
