--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load codrspace_tags %}
 {% load short_codes %}
+{% load url from future %}
 {% block content %}
 <span class="span6">
   {% for post in posts %}
@@ -14,10 +15,10 @@
     <span class="label label-warning">{{ post.status }}</span>
     {% endif %}
     {% endif %}
-    by <a href="#" rel="popover" data-original-title="{{ post.author.username }}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
+    by <a href="{% url "post_list" post.author.username %}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
     {% if post.author == user %}
-    <i class="icon-pencil"></i> <a href="{% url edit post.pk %}">edit</a>
-    <i class="icon-trash"></i> <a href="{% url delete post.pk %}">delete</a>
+    <i class="icon-pencil"></i> <a href="{% url "edit post.pk" %}">edit</a>
+    <i class="icon-trash"></i> <a href="{% url "delete post.pk" %}">delete</a>
     {% endif %}
   </div>
   <div class="post-content short">
