--- a/txrx/templates/blog_home.html
+++ b/txrx/templates/blog_home.html
@@ -17,8 +17,8 @@
     {% endif %}
     by <a href="{% url "post_list" post.author.username %}">{{ post.author.username }}</a> {% if post.status == 'published' %}on {{ post.publish_dt|localize:user }}{% endif %}
     {% if post.author == user %}
-    <i class="icon-pencil"></i> <a href="{% url "edit post.pk" %}">edit</a>
-    <i class="icon-trash"></i> <a href="{% url "delete post.pk" %}">delete</a>
+    <i class="icon-pencil"></i> <a href="{% url "edit" post.pk %}">edit</a>
+    <i class="icon-trash"></i> <a href="{% url "delete" post.pk %}">delete</a>
     {% endif %}
   </div>
   <div class="post-content short">
