--- a/txrx/templates/edit.html
+++ b/txrx/templates/edit.html
@@ -36,6 +36,9 @@
                <div id="tags">
                  {{ form.tags.label_tag }}
                  {{ form.tags }}
+                 <p class="muted">
+                   {{ form.tags.help_text }}
+                 </p>
                </div>
             </div>
             <input class="btn btn-success btn-large" type="submit" name="submit_post" value="Save changes" />
