--- a/txrx/templates/add.html
+++ b/txrx/templates/add.html
@@ -33,7 +33,7 @@
                    {{ form.status }}
                </div>
                <div id="tags">
-                 {{ form.tags.label.html }}
+                 {{ form.tags.label_tag }}
                  {{ form.tags }}
                  <p class="muted">{{ form.tags.help_text }}</p>
             </div>
